Dev davecgh feedback

--- a/journal/202011.md
+++ b/journal/202011.md
@@ -15,13 +15,13 @@ Unless otherwise noted, the work reported here has the "merged to master" status
 
 **[dcrd](https://github.com/decred/dcrd)**
 
-Merged in master and backported to v1.6 release branch:
+Merged in master (work towards v1.7) and backported to v1.6 release branch:
 
-- limited mempool to not track stats for too many unconfirmed [ancestor](https://github.com/decred/dcrd/pull/2458) transactions. This allows to prevent a number of complexity attacks and speed up block template generation for large chains of unconfirmed transactions.
+- limited mempool to not track stats for too many unconfirmed [ancestor](https://github.com/decred/dcrd/pull/2458) transactions. This prevents the possibility of a number of complexity attacks and speeds up block template generation for large chains of unconfirmed transactions.
 - corrected treasury vote [status handling](https://github.com/decred/dcrd/pull/2469) in RPC commands
-- added new field to output of some RPC commands to indicate [treasurybase](https://github.com/decred/dcrd/pull/2470) inputs (i.e. funds coming from the new treasury)
-- fixed [orphan blocks](https://github.com/decred/dcrd/pull/2474) stalling sync process { not sure I translated this correctly }
-- default curve to generate RPC certificates changed to P-256 because Chromium (used by Electron (used by Decrediton)) removed support for a stronger P-521.
+- added new fields to output of some RPC commands to indicate [treasurybase](https://github.com/decred/dcrd/pull/2470) and [treasuryspend](https://github.com/decred/dcrd/pull/2472) inputs (funds coming from the new treasury) and updated the docs
+- fixed minor [sync issue](https://github.com/decred/dcrd/pull/2474) in the treasury code discovered on testnet
+- default curve to generate RPC certificates changed to P-256 because Chromium (used by Decrediton) removed support for a stronger P-521.
 
 Other merged:
 
@@ -433,6 +433,6 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 Credits (alphabetical order):
 
 - writing and editing: bee, l1ndseymm, richardred
-- reviews and feedback: {}
+- reviews and feedback: davecgh
 - title image: {}
 - funding: Decred Treasury
