Dev feedback dnldd

--- a/journal/202011.md
+++ b/journal/202011.md
@@ -87,7 +87,7 @@ CMS:
 
 **[dcrpool](https://github.com/decred/dcrpool)**
 
-- completed [Postgres](https://github.com/decred/dcrpool/pull/282) implementation. All database tests are now run against both Bolt and Postgres. { a few highlights what Postgres offers to dcrpool would help }
+- completed [Postgres](https://github.com/decred/dcrpool/pull/282) implementation. All database tests are now run against both Bolt and Postgres. BoltDB only allows to deploy a single instance of dcrpool since it's an embedded key/value database. With Postgres, multiple dcrpool instances can be deployed against the same Postgres database.
 - extracted [errors](https://github.com/decred/dcrpool/pull/284) package to support extracting database into its own package
 - bug fixes and code cleanup
 
@@ -433,6 +433,6 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 Credits (alphabetical order):
 
 - writing and editing: bee, l1ndseymm, richardred
-- reviews and feedback: davecgh, jholdstock
+- reviews and feedback: davecgh, dnldd, jholdstock
 - title image: {}
 - funding: Decred Treasury
