--- a/journal/202011.md
+++ b/journal/202011.md
@@ -189,28 +189,18 @@ Other:
 
 ## People
 
-{ hint: list people who made meaningful commits merged in master branches, in alphabetical order }
+Welcome to new first time contributors with code merged to master: @HlloWrld([dcrweb](https://github.com/decred/dcrweb/commits?author=HlloWrld))
 
-Welcome to new first time contributors with code merged to master: @dreacot([godcr](https://github.com/planetdecred/godcr/commits?author=dreacot)), @HlloWrld([dcrweb](https://github.com/decred/dcrweb/commits?author=HlloWrld))
+Community stats as of Dec 1:
 
-
-{ welcome new corporate contractors with short intros, if any }
-
-{ updates from existing contractors }
-
-{ interviews about people }
-
-Community stats as of {date}:
-
-- Politeia users: {} (+{})
-- Twitter followers: {} (+{})
-- Reddit subscribers: {} (+{})
-- Matrix #general users: {} (+{})
-- Discord users: {}, verified to post: {}
-- Telegram users: {} (+{})
-- YouTube subscribers: {} (+{}), views: {} (+{})
-- LinkedIn followers: {} (+{})
-- GitHub dcrd stars: {} (+{}), forks: {} (+{})
+- Twitter followers: 40,897 (+79)
+- Reddit subscribers: 9,982 (+45)
+- Matrix #general users: 253 (+31)
+- Discord users: 1,501
+- Telegram users: 2,339 (-55)
+- YouTube subscribers: 4,250 (+40), views: 162K (+3K)
+- LinkedIn followers: 932 (+8)
+- GitHub dcrd stars: 567 (+1), forks: 246 (+0)
 
 ## Governance
 
