--- a/journal/202011.md
+++ b/journal/202011.md
@@ -408,14 +408,14 @@ Ethereum 2.0 staking coverage
 
 BCH fork
 
-The latest Bitcoin Cash hard fork [occurred](https://www.coindesk.com/bitcoin-cash-has-split-into-two-new-blockchains-again) in November, this time the focus of the dispute is funding for the ABC developers. This hash war had a clear winner, with the BCHN chain (no dev funding) attracting virtually all of the mining power.
+The latest Bitcoin Cash hard fork [occurred](https://www.coindesk.com/bitcoin-cash-has-split-into-two-new-blockchains-again) in November, this time the focus of dispute is funding for the ABC developers. This hash war had a clear [winner](https://abc.coin.dance/blocks/hashrate), with the BCHN chain (no dev funding) attracting virtually all of the mining power.
 
 - how did the fork go?
 - BCH moved to exchanges ahead of the hard fork https://twitter.com/philip_gradwell/status/1326452365004861440
 
 Ethereum network experienced a [disruption](https://www.coindesk.com/ethereums-hard-fork-disruption) on Nov 11. A recent version of Geth node software silently fixed a consensus bug that was dormant for over a year. Since it changed consensus code, it had a risk of an unintended hard fork. One vendor discovered the bug independently and seeing that the majority of nodes have upgraded, decided to test it [in production](https://twitter.com/jinglanW/status/1326651349912719360) and see what would happen. To everyone's surprise, among the minority of nodes running old software was Infura, a popular service provider used by "dapps" to sync with Ethereum network. The bug-triggering transaction halted Infura and a bunch of "decentralized" finance apps that relied on it, including Metamask, MakerDAO, Uniswap, Compound, and others. Binance and other exchanges have also halted trading after noticing conflicting transaction histories. Infura resolved the issue within hours and posted a [post-mortem](https://blog.infura.io/infura-mainnet-outage-post-mortem-2020-11-11/) explaining why they didn't upgrade and calling out the danger of silent consensus fixes. Ethereum developer also published a [post-mortem](https://gist.github.com/karalabe/e1891c8a99fdc16c4e60d9713c35401f) for Geth, which explained that the fix was done silently to not attract unwanted attention from attackers. Among other things, the incident teaches us that deploying critical fixes is challenging because it is a trade-off between informing good actors while not informing bad ones.
 
-The Aragon project is in the [process](https://aragon.org/blog/lightweight-process) of decommissioning the ANJ token which was introduced one year ago as the token to use with "Aragon Court", a dispute resolution service for smart contracts and DAOs. The ANJ token is now seen as a barrier to the success of Aragon Court, and will be bought out by the ANT holders by issuing ~1% inflation to the holders of ANJ.
+The Aragon project is in the [process](https://aragon.org/blog/lightweight-process) of decommissioning the ANJ token which was introduced one year ago as the token to use with "Aragon Court", a dispute resolution service for Aragon DAOs. The ANJ token is now seen as a barrier to the success of Aragon Court, and will be bought out by the ANT holders by issuing ~1% inflation to the holders of ANJ.
 
 { DEX }
 
