--- a/journal/202011.md
+++ b/journal/202011.md
@@ -425,7 +425,7 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 
 Credits (alphabetical order):
 
-- writing and editing: bee, l1ndseymm, richardred
+- writing and editing: bee, degeri, l1ndseymm, richardred
 - reviews and feedback: davecgh, dnldd, jholdstock, lukebp
 - title image: {}
 - funding: Decred Treasury
