--- a/journal/202011.md
+++ b/journal/202011.md
@@ -222,13 +222,13 @@ Politeia Digest [issue 39](https://blockcommons.red/politeia-digest/issue039/) h
 - check dcrdata.org (preferred), dcrstats.com and charts.dcr.farm to get the numbers
 - use the same `zoom` parameter for all dcrdata links }
 
-Hashrate: November's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kgw9asu9-ki79jtll&scale=linear&bin=block&axis=time) opened at ~226 Ph/s and closed ~293 Ph/s, bottoming at 215 Ph/s and peaking at 566 Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of Dec 1: UUPool 43.6%, Poolin 34.8%, easy2mine 13.25%, Huobipool 2.57%, Antpool 1.9%, F2Pool 1.5%, btc.com 1.2%, Luxor 1%, CoinMine 0.018%.
+Hashrate: November's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kgw9asu9-ki79jtll&scale=linear&bin=block&axis=time) opened at ~226 Ph/s and closed ~293 Ph/s, bottoming at 215 Ph/s and peaking at 566 Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of Dec 1: UUPool 44%, Poolin 35%, easy2mine 13%, Huobipool 2.6%, Antpool 2%, F2Pool 1.6%, BTC.com 1.2%, Luxor 1%, CoinMine 0.02%.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
-Staking: [30-day average](https://dcrstats.com/) ticket price was 158.66 DCR (+6.96). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kgvstdix-ki6sqhcl&scale=linear&bin=window&axis=time&visibility=true-false) varied between 139.3-188.85 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kgw97bu2-ki79jf1n&scale=linear&bin=block&axis=time&visibility=true-false) was 6.089-6.609 million DCR, which corresponded to 49.88-53.64% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kgw97bu2-ki79jf1n&scale=linear&bin=block&axis=time&visibility=true-false) in PoS.
+Staking: [30-day average](https://dcrstats.com/) ticket price was 158.66 DCR (+6.96). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kgw9asu9-ki79jtll&bin=window&axis=time&visibility=true-false&mode=stepped) varied between 139.3-188.9 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kgw9asu9-ki79jtll&scale=linear&bin=block&axis=time) was 6.09-6.61 million DCR, which corresponded to 49.88-53.64% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kgw9asu9-ki79jtll&scale=linear&bin=block&axis=time) in PoS.
 
-The ticket price once again reached new highs of 188.85 DCR.
+The ticket price once again reached new high of 188.85 DCR.
 
 { hint: fallback link for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
