--- a/journal/202011.md
+++ b/journal/202011.md
@@ -233,11 +233,13 @@ In other news:
 
 ## Integrations
 
-[decredbrasil.com](https://vspd.decredbrasil.com/) , [99split.com](https://vspd.99split.com/), [decredcommunity.org](https://vsp.decredcommunity.org/) and [stakeminer.com](https://vsp.stakeminer.com/) have all added support for the new VSPD.
+Welcome the new [vsp.decredcommunity.org](https://vsp.decredcommunity.org/) service that is running a mainnet instance of the new vspd software. As of writing it has ~70 live and ~30 voted tickets.
 
-{ hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best in a given month's compilation }
+Existing providers [decredbrasil.com](https://vspd.decredbrasil.com/), [99split.com](https://vspd.99split.com/), and [stakeminer.com](https://vsp.stakeminer.com/) have all launched vspd instances in addition to their existing dcrstakepool servers listed at [decred.org/vsp](https://decred.org/vsp/).
 
-{ check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list }
+As of writing we have a total of 5 mainnet vspd services to choose from. Thank you all for supporting [a more private](https://blog.decred.org/2020/06/02/A-More-Private-Way-to-Stake/) way to stake.
+
+Staked [announced](https://twitter.com/staked_us/status/1329173484598124546) the closure of their Decred VSP for lack of economic viability. As of Dec 8, Decred is still featured on the [site](https://staked.us/) and VSP [stats](https://decred.staked.us/stats) page shows 133 active users, 308 total users and 31 live tickets.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
