--- a/journal/202011.md
+++ b/journal/202011.md
@@ -239,6 +239,8 @@ Existing providers [decredbrasil.com](https://vspd.decredbrasil.com/), [99split.
 
 As of writing we have a total of 5 mainnet vspd services to choose from. Thank you all for supporting [a more private](https://blog.decred.org/2020/06/02/A-More-Private-Way-to-Stake/) way to stake.
 
+[Stakey.net](https://stakey.net/) VSP is now posting status and support updates on [Mastodon](https://citadel.stakey.net/@support).
+
 Staked [announced](https://twitter.com/staked_us/status/1329173484598124546) the closure of their Decred VSP for lack of economic viability. As of Dec 8, Decred is still featured on the [site](https://staked.us/) and VSP [stats](https://decred.staked.us/stats) page shows 133 active users, 308 total users and 31 live tickets.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
@@ -254,6 +256,8 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 ## Outreach
 
 { overview of outreach/communications/marketing/PR activity for past month and any short-term plans }
+
+Mastodon instance launched by Stakey.net VSP for their [support](https://citadel.stakey.net/@support) account is open to the Decred community via this [invite link](https://citadel.stakey.net/invite/tZ2Cm5FX). [Mastodon](https://docs.joinmastodon.org/) is an open-source microblogging alternative to Twitter and is part of the [Fediverse](https://en.wikipedia.org/wiki/Fediverse).
 
 - Decred listed at https://gioui.org/
 
