--- a/journal/202011.md
+++ b/journal/202011.md
@@ -247,11 +247,7 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Adoption
 
-{ new merchants }
-
-{ applications of Decred blockchain and related projects: Politeia, dcrtime, atomicswap }
-
-{ investment adoption }
+dcrtime was [used](https://twitter.com/Decred_BR/status/1328848031832215553) by VotoLegal to record and timestamp donations to Brazil's 2020 municipal elections campaign. According to [Geek Insider](https://geekinsider.com/decred-blockchain-for-brazil-municipal-elections/), more than 24K donations have been tracked totalling more than $600K as of Nov 19. ([discussion](https://www.reddit.com/r/decred/comments/jw4l9o/decred_blockchain_used_in_brazil_election/))
 
 ## Outreach
 
