--- a/journal/202011.md
+++ b/journal/202011.md
@@ -253,18 +253,18 @@ dcrtime was [used](https://twitter.com/Decred_BR/status/1328848031832215553) by 
 
 ## Outreach
 
-{ overview of outreach/communications/marketing/PR activity for past month and any short-term plans }
-
 Mastodon instance launched by Stakey.net VSP for their [support](https://citadel.stakey.net/@support) account is open to the Decred community via this [invite link](https://citadel.stakey.net/invite/tZ2Cm5FX). [Mastodon](https://docs.joinmastodon.org/) is an open-source microblogging alternative to Twitter and is part of the [Fediverse](https://en.wikipedia.org/wiki/Fediverse).
 
-- Decred listed at https://gioui.org/
+Decred is now listed as a sponsor at [gioui.org](https://gioui.org/).
 
-Monde PR’s achievements for November:
-- Created and pitched one story idea to finance and crypto publications
-- Responded to three requests for comments
-- Secured two media interviews
+Monde PR's achievements for November:
+
+- created and pitched one story idea to finance and crypto publications
+- responded to 3 requests for comments
+- secured 2 media interviews
 
 News coverage secured by Monde PR:
+
 - @richardred appeared on the [Hitechies podcast](https://www.hitechies.com/richard-red-at-decred-talks-to-pramod-dhakal/) talking about decentralization and the future of DeFi.
 - @jy-p appeared on the [Crypto Conversation podcast](https://bravenewcoin.com/insights/podcasts/how-the-decred-dex-plans-to-disrupt-the-crypto-exchange-market) talking about the DCRDEX launch.
 - An article in [Crypto Briefing](https://cryptobriefing.com/politicians-brazil-use-decred-record-political-donations/) featuring commentary from @jy-p on Decred’s use in Brazil’s election, syndicated to six news outlets including [Coin Market Cap](https://coinmarketcap.com/fr/headlines/news/politicians-brazil-use-decred-record-political-donations/).
@@ -276,7 +276,6 @@ News coverage secured by Monde PR:
 - An article in [Master of Nodes](https://mastersofnodes.com/decred-blockchain-system-implemented-in-brazil-municipal-elections) featuring commentary from @jy-p on Decred’s use in Brazil’s election.
 - @lukebp appeared on the [Digital Cash Network podcast](https://odysee.com/@DigitalCashNetwork:c/Decred:6?r=FqowB2QREmrBV4DcLpAWb8cz2K4gYVUV) talking about Decred’s governance model. 
 - An article in [Cointelegraph](https://cointelegraph.com/news/decred-co-founder-explains-rationale-behind-bitcoin-bull-and-bear-cycles) featuring commentary from @jy-p on Bitcoin’s bull and bear cycles, syndicated to 17 news outlets including [Cointelegraph Germany](https://de.cointelegraph.com/news/decred-co-founder-explains-rationale-behind-bitcoin-bull-and-bear-cycles), [Cointelegraph Brazil](https://cointelegraph.com.br/news/decred-co-founder-explains-rationale-behind-bitcoin-bull-and-bear-cycles) and [Cointelegraph Italy](https://it.cointelegraph.com/news/decred-co-founder-explains-rationale-behind-bitcoin-bull-and-bear-cycles).
-
 
 ## Events
 
