Outreach add Latam5 report

--- a/journal/202011.md
+++ b/journal/202011.md
@@ -257,6 +257,8 @@ Mastodon instance launched by Stakey.net VSP for their [support](https://citadel
 
 Decred is now listed as a sponsor at [gioui.org](https://gioui.org/).
 
+Decred Latam published 5th monthly [report](https://github.com/decredcommunity/proposals/blob/master/proposals/3c02b67/updates/20201120.md) of activities and expenses for their second proposal that is ending in December. A big final [report](https://github.com/DecredES/Monthly_reports/blob/master/Final_Report_June_December_2020.md) covering June-December was published together with the [3rd proposal](https://proposals.decred.org/proposals/350f64b) to continue the effort.
+
 Monde PR's achievements for November:
 
 - created and pitched one story idea to finance and crypto publications
