--- a/journal/202011.md
+++ b/journal/202011.md
@@ -300,24 +300,24 @@ Selected articles:
 
 Videos:
 
-- Decred bi-Weekly News Update - New 1.6 Release is Inbound & DEX Is Live! by @Exitus ([youtube](https://www.youtube.com/watch?v=mYfOr4e9MZ8))
-- Decred bi-Weekly News Update - Development Progress, Staking Participation All-Time High - And More! by @Exitus ([youtube](https://www.youtube.com/watch?v=13YGyb27z5E))
-- Decred - The Hybrid Blockchain by Decred Society ([youtube](https://www.youtube.com/watch?v=dszDzH0OlEo))
-- Luke Powell on Decred Governance, Hybrid Consensus, and New Decentralized Treasury by Digital Cash Network ([youtube](https://www.youtube.com/watch?v=4_EafyDcJvk), [odysee.com](https://odysee.com/@DigitalCashNetwork:c/Decred:6), [anchor.fm](https://anchor.fm/digitalcashnetwork))
+- Decred bi-weekly news update - New 1.6 release is inbound & DEX is live! by @Exitus ([youtube](https://www.youtube.com/watch?v=mYfOr4e9MZ8))
+- Decred bi-weekly news update - Development progress, staking participation all-time high - and more! by @Exitus ([youtube](https://www.youtube.com/watch?v=13YGyb27z5E))
+- Decred - The hybrid blockchain by Decred Society ([youtube](https://www.youtube.com/watch?v=dszDzH0OlEo))
+- Luke Powell on Decred governance, hybrid consensus, and new decentralized treasury by Digital Cash Network ([youtube](https://www.youtube.com/watch?v=4_EafyDcJvk), [odysee.com](https://odysee.com/@DigitalCashNetwork:c/Decred:6), [anchor.fm](https://anchor.fm/digitalcashnetwork))
 - Interview with Permabull Niño (@PermabullNino) by Staked Podcast ([youtube](https://www.youtube.com/watch?v=nRryWFk_l7k))
 - Interview with Le\_Hibou\_ (@Frenchy\_LeDegen) by Staked Podcast ([youtube](https://www.youtube.com/watch?v=N5BnEB6MDLs))
 - Interview with L.O.L. DEFI (@loldefi) by Staked Podcast ([youtube](https://www.youtube.com/watch?v=eqpafR0E1SA))
-- Crypto Convo - Eduardo Lima of the Staked Podcast Feat. DubDigital ([youtube](https://www.youtube.com/watch?v=ErezLZ-SG5o))
+- Crypto Convo - Eduardo Lima of the Staked Podcast feat. DubDigital ([youtube](https://www.youtube.com/watch?v=ErezLZ-SG5o))
 
 Audio-only version of Staked Podcast is available on [anchor.fm](https://anchor.fm/staked-podcast). Congrats with hitting [1,000](https://twitter.com/stakedpodcast/status/1326856050465792008) downloads/streams!
 
 Audio:
 
-- Hitechies Podcast - Richard Red, Research and Strategy Lead at Decred.org Talks to Pramod Dhakalrr ([hitechies.com](https://www.hitechies.com/richard-red-at-decred-talks-to-pramod-dhakal/))
-- Crypto Conversation 074 - How the Decred Dex plans to disrupt the crypto exchange market with @jy-p ([bravenewcoin.com](https://bravenewcoin.com/insights/podcasts/how-the-decred-dex-plans-to-disrupt-the-crypto-exchange-market), [youtube](https://www.youtube.com/watch?v=i3LQza2sYNQ))
-- Decred in Depth 33: Seth Simmons - DCR + Monero Privacy ([libsyn](https://decredindepth.libsyn.com/seth-simmons-dcr-monero-privacy))
-- Rough Consensus 12: Bitcoin Has Entered the China Shop. The lads are joined by @ck\_SNARKs, co-host of @POVCryptoPod and Bitcoin Magazine, to discuss Bitcoin adoption, lessons from altcoin boom and bust cycles, the role of price within the cryptocurrency space, and more. ([libsyn](https://roughconsensus.libsyn.com/episode-12-bitcoin-has-entered-the-china-shop-w-ck_snarks))
-- Rough Consensus 13: Digital Autonomy and Freedom. The spidermen are joined by Frank Braun (@thefrankbraun) in a wide ranging conversation covering: cypherpunk digital societies, privacy and freedom in the digital age, role of BTC, DCR, Scrit and others in a brighter future. ([libsyn](https://roughconsensus.libsyn.com/episode-13-digital-autonomy-and-freedom-with-frank-braun))
+- Hitechies Podcast - Richard Red and Pramod Dhakalrr talk about DeFi challenges, ETH, banking industry, future of payment systems and more. ([hitechies.com](https://www.hitechies.com/richard-red-at-decred-talks-to-pramod-dhakal/))
+- Crypto Conversation 074 - How the Decred DEX plans to disrupt the crypto exchange market with @jy-p ([bravenewcoin.com](https://bravenewcoin.com/insights/podcasts/how-the-decred-dex-plans-to-disrupt-the-crypto-exchange-market), [youtube](https://www.youtube.com/watch?v=i3LQza2sYNQ))
+- Decred in Depth 33: Seth Simmons on DCR + Monero privacy ([libsyn](https://decredindepth.libsyn.com/seth-simmons-dcr-monero-privacy))
+- Rough Consensus 12: Bitcoin has entered the China shop. The lads are joined by @ck\_SNARKs, co-host of @POVCryptoPod and Bitcoin Magazine, to discuss Bitcoin adoption, lessons from altcoin boom and bust cycles, the role of price within the cryptocurrency space, and more. ([libsyn](https://roughconsensus.libsyn.com/episode-12-bitcoin-has-entered-the-china-shop-w-ck_snarks))
+- Rough Consensus 13: Digital autonomy and freedom. The spidermen are joined by Frank Braun (@thefrankbraun) in a wide ranging conversation covering: cypherpunk digital societies, privacy and freedom in the digital age, role of BTC, DCR, Scrit and others in a brighter future. ([libsyn](https://roughconsensus.libsyn.com/episode-13-digital-autonomy-and-freedom-with-frank-braun))
 
 Art and memes:
 
