--- a/journal/202011.md
+++ b/journal/202011.md
@@ -261,6 +261,8 @@ Decred is now listed as a sponsor at [gioui.org](https://gioui.org/).
 
 Decred Latam published 5th monthly [report](https://github.com/decredcommunity/proposals/blob/master/proposals/3c02b67/updates/20201120.md) of activities and expenses for their second proposal that is ending in December. A big final [report](https://github.com/DecredES/Monthly_reports/blob/master/Final_Report_June_December_2020.md) covering June-December was published together with the [3rd proposal](https://proposals.decred.org/proposals/350f64b) to continue the effort.
 
+Blockchain Learning Challenge (co-organized by Decred Latam and Talent Land Network) had 6 projects that made it to the finals. Participants published source code on GitHub and presented their projects in short video pitches. 5 judges have rated each project in 5 areas (how much data was used and how, how original and relevant for Decred the idea is, how easy it is to use the app, how finished the app is, and how well things are documented). Summary of the finals with all ratings and links is [here](https://github.com/DecredES/Challenge/blob/main/Proyectos-Finalistas.md).
+
 Monde PR's achievements for November:
 
 - created and pitched one story idea to finance and crypto publications
