--- a/journal/202011.md
+++ b/journal/202011.md
@@ -292,6 +292,7 @@ Attended:
 - Nov 9 - [Talent Land Latinoamerica](https://www.talentland.talent-republic.tv/) - Internet. @adcade, @elian, @francov_ and @pablito talked about "Our money, our rules: Leaving behind the national currencies". ([video](https://www.youtube.com/watch?v=B0tEYQ2l_RM))
 - Nov 12 - [Hablemos Decred 21](https://twitter.com/Decred_ES/status/1326279642169348096) - Internet. Joined by guest Cristobal Pereira (CEO LatAmTech) to recap Blockchain Summit Latam and discuss perspectives for the Latam ecosystem. ([video](https://www.youtube.com/watch?v=sTaghDgY5k8))
 - Nov 19 - [Hablemos Decred 22](https://twitter.com/Decred_ES/status/1328819770876162049) - Internet. Joined by guest Joaquin Moreno to discuss the topic "Companies buying Bitcoin, are you ready?". ([video](https://www.youtube.com/watch?v=N2hxP8I6hbM))
+- Nov 19 - [University of El Salvador](https://twitter.com/addcade/status/1329605293081288709) - @adcade. Students of the economics faculty learned about cryptocurrencies, Decred, governance and contrubution opportunities.
 - Nov 27 - [Hablemos Decred 23](https://twitter.com/Decred_ES/status/1331372082354130946) - Internet. Joined by guest Felipe Montoya to discuss similarities and differences between "DLTs" and crypto. ([video](https://www.youtube.com/watch?v=tu5OqKQhSbk))
 - Nov 28 - [Partnership agreement with OMJD](https://decredcommunity.github.io/events/index/20201128.1) - Casablanca, Morocco. Following an online meetup with "The Moroccan Organization of Young Decision Makers" (OMJD) in July, @arij signed a 2-year agreement with them in order to hold meetups, workshops and conferences about Decred and blockchain technology for the benefit of the young.
 
@@ -426,7 +427,7 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 
 Credits (alphabetical order):
 
-- writing and editing: bee, degeri, l1ndseymm, richardred
+- writing and editing: adcade, bee, degeri, l1ndseymm, richardred
 - reviews and feedback: davecgh, dnldd, jholdstock, JoeGruff, lukebp
 - title image: {}
 - funding: Decred Treasury
