--- a/journal/202011.md
+++ b/journal/202011.md
@@ -261,7 +261,7 @@ Decred is now listed as a sponsor at [gioui.org](https://gioui.org/).
 
 Decred in Spanish published 5th monthly [report](https://github.com/decredcommunity/proposals/blob/master/proposals/3c02b67/updates/20201120.md) of activities and expenses for their second proposal that is ending in December. A big final [report](https://github.com/DecredES/Monthly_reports/blob/master/Final_Report_June_December_2020.md) covering June-December was published together with the [3rd proposal](https://proposals.decred.org/proposals/350f64b) to continue the effort.
 
-Blockchain Learning Challenge (co-organized by Decred in Spanish and Talent Land Network) had 6 projects that made it to the finals. Participants published source code on GitHub and presented their projects in short video pitches. 5 judges have rated each project in 5 areas (how much data was used and how, how original and relevant for Decred the idea is, how easy it is to use the app, how finished the app is, and how well things are documented). Summary of the finals with all ratings and links is [here](https://github.com/DecredES/Challenge/blob/main/Proyectos-Finalistas.md) and final award video [here](https://youtu.be/CQTitBVUMMY).
+Blockchain Learning Challenge (co-organized by Decred in Spanish and Talent Land Network) had 6 projects that made it to the finals. Participants published source code on GitHub and presented their projects in short video pitches. 5 judges have rated each project in 5 areas (how much data was used and how, how original and relevant for Decred the idea is, how easy it is to use the app, how finished the app is, and how well things are documented). Summary of the finals with all ratings and links is [here](https://github.com/DecredES/Challenge/blob/main/Proyectos-Finalistas.md), and the final award video is [here](https://www.youtube.com/watch?v=CQTitBVUMMY).
 
 Monde PR's achievements for November:
 
@@ -287,13 +287,13 @@ News coverage secured by Monde PR:
 
 Attended:
 
-- Nov 2 - [Blockchain Summit Latam](https://www.blockchainsummit.la/) - Internet. @elian gave a talk "Governance in public protocols" about the similarities and differences between several public blockchains and how does Decred stand out from these. ([video](https://youtu.be/SiMoxHS8AAk?list=PLiJAJqCfjxwIR6q1W0bidE9W4369KMjzz))
+- Nov 2 - [Blockchain Summit Latam](https://www.blockchainsummit.la/) - Internet. @elian gave a talk "Governance in public protocols" about the similarities and differences between several public blockchains and how does Decred stand out from these. ([video](https://www.youtube.com/watch?v=SiMoxHS8AAk&list=PLiJAJqCfjxwIR6q1W0bidE9W4369KMjzz))
 - Nov 5 - [Hablemos Decred 20](https://twitter.com/Decred_ES/status/1323671501212684288) - Internet. @elian and Fernando Quiros of Cointelegraph in Spanish talked about the possible use cases for blockchain technology and cryptocurrencies in the context of journalism, communication and advertising. ([video](https://www.youtube.com/watch?v=V1tl600djBA))
 - Nov 9 - [Talent Land Latinoamerica](https://www.talentland.talent-republic.tv/) - Internet. @adcade, @elian, @francov_ and @pablito talked about "Our money, our rules: Leaving behind the national currencies". ([video](https://www.youtube.com/watch?v=B0tEYQ2l_RM))
 - Nov 12 - [Hablemos Decred 21](https://twitter.com/Decred_ES/status/1326279642169348096) - Internet. Joined by guest Cristobal Pereira (CEO LatAmTech) to recap Blockchain Summit Latam and discuss perspectives for the Latam ecosystem. ([video](https://www.youtube.com/watch?v=sTaghDgY5k8))
 - Nov 19 - [Hablemos Decred 22](https://twitter.com/Decred_ES/status/1328819770876162049) - Internet. Joined by guest Joaquin Moreno to discuss the topic "Companies buying Bitcoin, are you ready?". ([video](https://www.youtube.com/watch?v=N2hxP8I6hbM))
 - Nov 19 - [University of El Salvador](https://twitter.com/addcade/status/1329605293081288709) - @adcade. Students of the economics faculty learned about cryptocurrencies, Decred, governance and contrubution opportunities.
-- Nov 27 - [Hablemos Decred 23](https://twitter.com/Decred_ES/status/1331372082354130946) - Internet. Joined by @caibarrad from Decred in Spanish and guest Felipe Montoya to discuss about similarities and differences between "DLTs" and crypto. ([video](https://www.youtube.com/watch?v=tu5OqKQhSbk))
+- Nov 27 - [Hablemos Decred 23](https://twitter.com/Decred_ES/status/1331372082354130946) - Internet. Joined by @caibarrad from Decred in Spanish and guest Felipe Montoya to discuss similarities and differences between "DLTs" and crypto. ([video](https://www.youtube.com/watch?v=tu5OqKQhSbk))
 - Nov 28 - [Partnership agreement with OMJD](https://decredcommunity.github.io/events/index/20201128.1) - Casablanca, Morocco. Following an online meetup with "The Moroccan Organization of Young Decision Makers" (OMJD) in July, @arij signed a 2-year agreement with them in order to hold meetups, workshops and conferences about Decred and blockchain technology for the benefit of the young.
 
 Spanish Decred events keep getting announcements at [Cointelegraph in Spanish](https://es.cointelegraph.com/tags/decred).
@@ -428,7 +428,7 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 
 Credits (alphabetical order):
 
-- writing and editing: adcade, bee, degeri, l1ndseymm, richardred
+- writing and editing: adcade, bee, degeri, elian, l1ndseymm, richardred
 - reviews and feedback: davecgh, dnldd, jholdstock, JoeGruff, lukebp
 - title image: {}
 - funding: Decred Treasury
