--- a/journal/202011.md
+++ b/journal/202011.md
@@ -231,6 +231,8 @@ There were 4 proposals published in October, 3 have been approved and 1 has been
 
 Politeia Digest [issue 39](https://blockcommons.red/politeia-digest/issue039/) has more details on the month's proposals.
 
+The structure of [proposals](https://github.com/decredcommunity/proposals) repository has been streamlined and it is welcoming all updates on approved proposals.
+
 ## Network
 
 Hashrate: November's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kgw9asu9-ki79jtll&scale=linear&bin=block&axis=time) opened at ~226 Ph/s and closed ~293 Ph/s, bottoming at 215 Ph/s and peaking at 566 Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of Dec 1: UUPool 44%, Poolin 35%, easy2mine 13%, Huobipool 2.6%, Antpool 2%, F2Pool 1.6%, BTC.com 1.2%, Luxor 1%, CoinMine 0.02%.
@@ -276,6 +278,8 @@ Decred is now listed as a sponsor at [gioui.org](https://gioui.org/).
 Decred in Spanish published 5th monthly [report](https://github.com/decredcommunity/proposals/blob/master/proposals/3c02b67/updates/20201120.md) of activities and expenses for their second proposal that is ending in December. A big final [report](https://github.com/DecredES/Monthly_reports/blob/master/Final_Report_June_December_2020.md) covering June-December was published together with the [3rd proposal](https://proposals.decred.org/proposals/350f64b) to continue the effort.
 
 Blockchain Learning Challenge (co-organized by Decred in Spanish and Talent Land Network) had 6 projects that made it to the finals. Participants published source code on GitHub and presented their projects in short video pitches. 5 judges have rated each project in 5 areas (how much data was used and how, how original and relevant for Decred the idea is, how easy it is to use the app, how finished the app is, and how well things are documented). Summary of the finals with all ratings and links is [here](https://github.com/DecredES/Challenge/blob/main/Proyectos-Finalistas.md), and the final award video is [here](https://www.youtube.com/watch?v=CQTitBVUMMY).
+
+@michae2xl published a [report](https://github.com/decredcommunity/proposals/blob/master/proposals/bc20f98/updates/20201203.md) of his November activities for the Brazil Marketing proposal.
 
 Monde PR's achievements for November:
 
