--- a/journal/202011.md
+++ b/journal/202011.md
@@ -6,7 +6,8 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 { introduction, major news of the month ordered by impact, don't put any links here }
 
-- new v1.6 RCs (tons of bugfixing and polishing decrediton work in decrediton)
+- new v1.6 RCs with tons of bugfixing and polishing
+- maybe: treasury activation on testnet { not sure its big enough for a highlight }
 - dcrdex a stash of UI and backend improvements and some edge case fixes
 
 ## v1.6 Release Candidate 4 is out
@@ -37,20 +38,20 @@ Merged in master (work towards v1.7) and backported to v1.6 release branch:
 - corrected treasury vote [status handling](https://github.com/decred/dcrd/pull/2469) in RPC commands
 - added new fields to output of some RPC commands to indicate [treasurybase](https://github.com/decred/dcrd/pull/2470) and [treasuryspend](https://github.com/decred/dcrd/pull/2472) inputs (funds coming from the new treasury) and updated the docs
 - fixed minor [sync issue](https://github.com/decred/dcrd/pull/2474) in the treasury code discovered on testnet
-- default curve to generate RPC certificates changed to P-256 because Chromium (used by Decrediton) removed support for a stronger P-521.
+- default curve to generate RPC certificates changed to P-256 because Chromium (used by Decrediton) [removed](https://security.stackexchange.com/questions/100991/why-is-secp521r1-no-longer-supported-in-chrome-others) support for a stronger P-521.
 
 Other merged:
 
 - gencerts tool gained the ability to generate certificates signed by a local CA certificate and key, which helps to reduce configuration complexity
 - fixed concurrency issues
 - more tests for [rpcserver](https://github.com/decred/dcrd/issues/2069)
-- refactored [upgrade](https://github.com/decred/dcrd/pull/2457) logic to deduplicate and make it faster to write future upgrades
+- refactored database [upgrade](https://github.com/decred/dcrd/pull/2457) logic to deduplicate and make it faster to write future upgrades
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
 - use [random coin](https://github.com/decred/dcrwallet/pull/1914) selection for all regular sends
-- save unpublished [fee](https://github.com/decred/dcrwallet/pull/1915) transaction to prevent double spends across wallet restarts
-- send ticket's [parent](https://github.com/decred/dcrwallet/pull/1917) transaction along the fee address request (to register the ticket faster, the VSP needs to be aware of the output funding the ticket, which typically comes from the "split transaction" mined in the same block and not always immediately visible by the VSP)
+- save unpublished [VSP fee](https://github.com/decred/dcrwallet/pull/1915) transaction to prevent double spends across wallet restarts
+- send ticket's [parent](https://github.com/decred/dcrwallet/pull/1917) transaction along the VSP fee address request (to register the ticket faster, the VSP needs to be aware of the output funding the ticket, which typically comes from the "split transaction" mined in the same block and not always immediately visible by the VSP)
 - use correct [change account](https://github.com/decred/dcrwallet/pull/1919) for paying VSP fees when performing a mixed ticket purchase, in order to prevent unmixed change from being used with a mixed account (there was no privacy leak because mixed VSP staking is not released yet and there was no such issue for mixed solo staking)
 - make max VSP fee [configurable](https://github.com/decred/dcrwallet/pull/1933)
 - bug fixes and documentation updates
@@ -59,10 +60,10 @@ Other merged:
 
 - updating of Trezor [firmware](https://github.com/decred/decrediton/pull/2932) (a step towards [Trezor staking](https://github.com/decred/decrediton/issues/2681) support)
 - [Privacy](https://github.com/decred/decrediton/pull/2987) page reworked for simplicity, following the updated [design](https://github.com/decred/decrediton/issues/2965)
-- introduction to Privacy [help page](https://github.com/decred/decrediton/pull/2885)
+- [help page](https://github.com/decred/decrediton/pull/2885) introducing Privacy features
 - show [logs](https://github.com/decred/decrediton/pull/2888) on the Privacy page
 - ability to allow sending transactions from accounts [other than](https://github.com/decred/decrediton/pull/2909) mixed account
-- filter for [mixed](https://github.com/decred/decrediton/pull/2926) transactions
+- display filter for [mixed](https://github.com/decred/decrediton/pull/2926) transactions
 - fixed wrong [change](https://github.com/decred/decrediton/pull/2889) destination for privacy wallets
 - [filter](https://github.com/decred/decrediton/pull/2854) proposals that finished voting by their approved or rejected status
 - don't allow to [close](https://github.com/decred/decrediton/pull/3005) Decrediton while certain operations are running
@@ -82,7 +83,7 @@ In progress:
 
 **[Politeia](https://github.com/decred/politeia)**
 
-- [TOTP code](https://github.com/decred/politeia/pull/1212) check on login (those 6 digit codes for 2FA)
+- [TOTP code](https://github.com/decred/politeia/pull/1212) check on login (those 6-digit codes for 2FA)
 - inline [images](https://github.com/decred/politeiagui/pull/2201) in drafts
 - numerous [design fixes](https://github.com/decred/politeiagui/pull/2197)
 - automated [UI testing](https://github.com/decred/politeiagui/pull/2151) using [cypress](https://www.cypress.io/)
@@ -114,7 +115,7 @@ In progress:
 
 - added an [IPC](https://en.wikipedia.org/wiki/Inter-process_communication) [facility](https://github.com/decred/dcrlnd/pull/117) to allow parent processes (such as Decrediton) to control dcrlnd process
 
-October's [porting](https://github.com/decred/dcrlnd/pull/103) of changes from the upstream lnd [0.11.1](https://github.com/lightningnetwork/lnd/releases/tag/v0.11.1-beta) included fixes of [two](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002858.html) [vulnerabilities](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002857.html) that may potentially lead to loss of funds. More background from the person who discovered them [here](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002859.html) and [here](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002855.html).
+October's [porting](https://github.com/decred/dcrlnd/pull/103) of changes from the upstream lnd [0.11.1](https://github.com/lightningnetwork/lnd/releases/tag/v0.11.1-beta) included fixes of [two](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002858.html) [vulnerabilities](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002857.html) that may potentially lead to loss of funds. More background from the discoverer is [here](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002859.html) and [here](https://lists.linuxfoundation.org/pipermail/lightning-dev/2020-October/002855.html).
 
 It is recommended to upgrade to the latest master or release candidate [tag](https://github.com/decred/dcrlnd/tags) of dcrlnd.
 
@@ -135,7 +136,7 @@ Merged in master:
 - improved [shutdown](https://github.com/decred/dcrdex/pull/787) sequence
 - avoid wallet [locked](https://github.com/decred/dcrdex/pull/817) errors
 - optimized [memory](https://github.com/decred/dcrdex/pull/794) usage of order books
-- configurable [lot limits](https://github.com/decred/dcrdex/pull/815) for new users and users with good swap history { is it a limit on how many orders they can place? or is 'lot' and 'order' not the same? }
+- configurable [lot limits](https://github.com/decred/dcrdex/pull/815) for new users and users with good swap history
 - admin functions to retrieve [market data](https://github.com/decred/dcrdex/pull/771)
 - faster and richer [test harnesses](https://github.com/decred/dcrdex/pull/820)
 - [load testing](https://github.com/decred/dcrdex/pull/717) bot with customizable "programs" to stress the system
@@ -150,13 +151,13 @@ In progress:
 - [max order](https://github.com/decred/dcrdex/pull/842) estimation
 - user [reputation](https://github.com/decred/dcrdex/pull/848)
 - [resuming](https://github.com/decred/dcrdex/pull/856) swaps from the database
-- market data [API endpoints](https://github.com/decred/dcrdex/pull/796) to allow external parties and websites to request data from the DEX
+- market data [API endpoints](https://github.com/decred/dcrdex/pull/796) to allow external parties and websites to pull data from the DEX
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
 Merged in dcrlibwallet shared library:
 
-- ability to send [custom inputs](https://github.com/planetdecred/dcrlibwallet/pull/165)
+- ability to send [custom inputs](https://github.com/planetdecred/dcrlibwallet/pull/165) (to support [coin control](https://nopara73.medium.com/coin-control-is-must-learn-if-you-care-about-your-privacy-in-bitcoin-33b9a5f224a2) features)
 - prevent more than one wallet from using the [same seed](https://github.com/planetdecred/dcrlibwallet/pull/138)
 
 In progress:
@@ -189,14 +190,15 @@ In progress:
 
 **[dcrros](https://github.com/decred/dcrros)**
 
-- [unit test](https://github.com/decred/dcrros/pull/9) coverage for every service call of the backend and the majority of the code paths, also updated to Rosetta v1.4.5
+- updated to Rosetta spec [v1.4.5](https://github.com/coinbase/rosetta-specifications/releases/tag/v1.4.5)
+- [unit test](https://github.com/decred/dcrros/pull/9) coverage for every service call of the backend and the majority of the code paths
 - improved handling of [connection](https://github.com/decred/dcrros/pull/11) to dcrd
 - return [peer list](https://github.com/decred/dcrros/pull/12) and sync status
 - make Construction API methods usable in [offline](https://github.com/decred/dcrros/pull/13) instance as required by the spec
 
 **[decred.org](https://github.com/decred/dcrweb)**
 
-- press releases converted to [standalone](https://github.com/decred/dcrweb/pull/931) pages
+- press releases converted to [separate](https://github.com/decred/dcrweb/pull/931) pages
 - content updates
 
 Other:
