--- a/journal/202011.md
+++ b/journal/202011.md
@@ -207,7 +207,7 @@ Other:
 
 ## People
 
-Welcome to new first time contributors with code merged to master: @HlloWrld([dcrweb](https://github.com/decred/dcrweb/commits?author=HlloWrld))
+Welcome to new first time contributors with code merged to master: @HlloWrld ([dcrweb](https://github.com/decred/dcrweb/commits?author=HlloWrld)).
 
 Community stats as of Dec 1:
 
@@ -227,13 +227,13 @@ In November the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4Dh
 There were 4 proposals published in October, 3 have been approved and 1 has been abandoned.
 
 - GoDCR [proposal](https://proposals.decred.org/proposals/e5c8051) from @raedah requested a budget of $60K to further develop (8 months) a Go-native desktop wallet using [Gio](https://gioui.org/) library. This proposal includes a $1,000/month sponsorship of Gio, for which GoDCR has become a pioneering project. Approved with 92% support and 38% turnout.
-- A related mobile wallets [proposal](https://proposals.decred.org/proposals/bc499c9) from @raedah requested $44K for a further 8 months of work on the Android and iOS mobile wallets. Both wallets share the [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) component, which is also used by GoDCR. Approved with 93% support and 38% turnout.
-- A [proposal](https://proposals.decred.org/proposals/3943bff) from @joegruff to further develop a Decred Address Scanner Android app requested $3,000 for work already completed (app has been open source and in the Google Play store for a year) and $6,000 maximum for necessary updates and new features. By popular demand in comments Joe [agreed](https://proposals.decred.org/proposals/3943bff/comments/15) to add compact filters support to improve privacy, and even work voluntarily if needed (because it was too late to edit the proposal with this feature). The vote was quite [unpredictable](https://explorer.dcrdata.org/proposal/decred-address-scanner) as the support stayed below 60% most of the time, but eventually the proposal was approved with 67% support and 34% turnout.
-- A [proposal](https://proposals.decred.org/proposals/8a09324) from @paris\_smithson to fund artwork production and marketing for [WhyDecred.com](https://www.whydecred.com/) originally requested $16,800 to fund 16 artworks, was edited to drop the request by $10K, before ultimately being abandoned with the idea that the site will be completed before another proposal is submitted.
+- A related mobile wallets [proposal](https://proposals.decred.org/proposals/bc499c9) from @raedah requested $44K for a further 8 months of work on the Android and iOS wallets. Both mobile wallets and GoDCR share the [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) component, which allows all three to access new features added to it. Approved with 93% support and 38% turnout.
+- A [proposal](https://proposals.decred.org/proposals/3943bff) from @joegruff to further develop a Decred Address Scanner Android app requested $3,000 for work already completed (app has been open source and in the Google Play store for a year) and $6,000 maximum for necessary updates and new features. By popular demand in comments Joe [agreed](https://proposals.decred.org/proposals/3943bff/comments/15) to add compact filters support to improve privacy, and even work voluntarily if needed (because it was too late to edit the proposal with this feature). The vote went quite [unpredictably](https://explorer.dcrdata.org/proposal/decred-address-scanner) as the support stayed below 60% most of the time, but eventually the proposal was approved with 67% support and 34% turnout.
+- A [proposal](https://proposals.decred.org/proposals/8a09324) from @paris\_smithson to fund artwork production and marketing for [WhyDecred.com](https://www.whydecred.com/) originally requested $16,800 to fund 16 artworks, was edited to drop the request by $10K (to $6,800), before ultimately being abandoned with the idea that the site will be completed before another proposal is submitted.
 
 Politeia Digest [issue 39](https://blockcommons.red/politeia-digest/issue039/) has more details on the month's proposals.
 
-The structure of [proposals](https://github.com/decredcommunity/proposals) repository has been streamlined and it is welcoming all updates on approved proposals.
+[decredcommunity/proposals](https://github.com/decredcommunity/proposals) repository has been reorganized for consistent structure. The repo currently holds 52 updates for 13 proposals. Please submit updates for your proposals as it helps to collect them in one place (vs searching them across chats and Reddit) and protect from loss.
 
 ## Network
 
