--- a/journal/202011.md
+++ b/journal/202011.md
@@ -241,13 +241,13 @@ Hashrate: November's [hashrate](https://explorer.dcrdata.org/charts?chart=hashra
 
 Staking: [30-day average](https://dcrstats.com/) ticket price was 158.66 DCR (+6.96). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kgw9asu9-ki79jtll&bin=window&axis=time&visibility=true-false&mode=stepped) varied between 139.3-188.9 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kgw9asu9-ki79jtll&scale=linear&bin=block&axis=time) was 6.09-6.61 million DCR, which corresponded to 49.88-53.64% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kgw9asu9-ki79jtll&scale=linear&bin=block&axis=time) in PoS.
 
-The ticket price once again reached new high of 188.85 DCR.
+The ticket price once again reached new high of 188.85 DCR while stake participation (DCR locked in tickets) has hit an _all-time_ of 53.6%.
 
 Nodes: Throughout [November](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1604188800000&to=1606780800000) there was an average of 114 public listening nodes and 166 total nodes per dcr.farm. Average version distribution for November: 28% dcrd v1.5.2, 20% dcrd v1.5.1, 13% dcrd v1.6 dev builds, 5% dcrd v1.5.0, 3.4% dcrd v1.7 dev builds, 3% dcrd v1.5 dev and RC builds, 1.1% dcrd v1.4, 12% dcrwallet v1.5.1, 2.5% dcrwallet v1.6 dev and RC builds, 1.3% dcrwallet v1.5, 0.8% dcrwallet v1.4, 9% others.
 
 In other news:
 
-- Decred network has processed [500,000](https://twitter.com/decredproject/status/1324674240268898304) blocks
+- Decred network has processed [500,000](https://twitter.com/decredproject/status/1324674240268898304) blocks!
 - there's a [new](https://twitter.com/CoinShuffle_BOT/status/1324444980308594689) [@CoinShuffle_BOT](https://twitter.com/CoinShuffle_BOT) account that tweets Decred's daily mixing stats
 - wealth distribution [study](https://coinmetrics.io/bitcoin-an-unprecedented-experiment-in-fair-distribution/) by Coin Metrics has found that Decred is second after Bitcoin by their Network Distribution Factor metric (note: NDF is based on addresses and many addresses may be owned by the same person, discussion [here](https://www.reddit.com/r/decred/comments/jrsrbk/network_distribution_factor_ndf_btc_has_the/))
 
