--- a/journal/202011.md
+++ b/journal/202011.md
@@ -6,12 +6,10 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 November's top stories:
 
-- new v1.6 RCs with tons of bugfixing and polishing
-- dcrdex a stash of UI and backend improvements and some edge case fixes
-- mobile apps and godcr formally funded via Pi
-- more mainnet vspd deployments
-- maybe: treasury activation on testnet { not sure its big enough for a highlight }
-- maybe: new highs for ticket price and DCR locked
+- The v1.6 Release Candidates have been tested by the community and received many bug fixes and user experience refinements, problems are hard to find now so that usually means graduation to a full-fledged release will happen soon.
+- dcrdex released another new version which brings a stash of UI and backend improvements and some edge case fixes.
+- Funding for continued development of mobile wallets and a new GoDCR desktop wallet was approved, the funding for GoDCR also includes sponsorship of the Gio library which it uses for the interface.
+- VSPs are onboarding to vspd, and already four providers have upgraded to support the new account-less and optionally mixed tickets which Decrediton offers in v1.6.
 
 ## v1.6 Release Candidate 4
 
