--- a/journal/202011.md
+++ b/journal/202011.md
@@ -7,7 +7,7 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 November's top stories:
 
 - The v1.6 Release Candidates have been tested by the community and received many bug fixes and user experience refinements, problems are hard to find now so that usually means graduation to a full-fledged release will happen soon.
-- dcrdex released another new version which brings a stash of UI and backend improvements and some edge case fixes.
+- dcrdex released a patch release with some edge case fixes and a stash of UI and backend improvements for the next release.
 - Funding for continued development of mobile wallets and a new GoDCR desktop wallet was approved, the funding for GoDCR also includes sponsorship of the Gio library which it uses for the interface.
 - VSPs are onboarding to vspd, and already four providers have upgraded to support the new account-less and optionally mixed tickets which Decrediton offers in v1.6.
 
