--- a/journal/202011.md
+++ b/journal/202011.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – November 2020
+# Decred Journal – November 2020
 
 ![abstract art](../img/journal-202011-384.png)
 
@@ -306,7 +306,7 @@ Attended:
 
 - Nov 2 - [Blockchain Summit Latam](https://www.blockchainsummit.la/) - Internet. @elian gave a talk "Governance in public protocols" about the similarities and differences between several public blockchains and how does Decred stand out from these. ([video](https://www.youtube.com/watch?v=SiMoxHS8AAk&list=PLiJAJqCfjxwIR6q1W0bidE9W4369KMjzz))
 - Nov 5 - [Hablemos Decred 20](https://twitter.com/Decred_ES/status/1323671501212684288) - Internet. @elian and Fernando Quiros of Cointelegraph in Spanish talked about the possible use cases for blockchain technology and cryptocurrencies in the context of journalism, communication and advertising. ([video](https://www.youtube.com/watch?v=V1tl600djBA))
-- Nov 9 - [Talent Land Latinoamerica](https://www.talentland.talent-republic.tv/) - Internet. @adcade, @elian, @francov_ and @pablito talked about "Our money, our rules: Leaving behind the national currencies". ([video](https://www.youtube.com/watch?v=B0tEYQ2l_RM))
+- Nov 9 - [Talent Land Latinoamerica](https://www.talentland.talent-republic.tv/) - Internet. @adcade, @elian, @francov\_ and @pablito talked about "Our money, our rules: Leaving behind the national currencies". ([video](https://www.youtube.com/watch?v=B0tEYQ2l_RM))
 - Nov 12 - [Hablemos Decred 21](https://twitter.com/Decred_ES/status/1326279642169348096) - Internet. Joined by guest Cristobal Pereira (CEO LatAmTech) to recap Blockchain Summit Latam and discuss perspectives for the Latam ecosystem. ([video](https://www.youtube.com/watch?v=sTaghDgY5k8))
 - Nov 19 - [Hablemos Decred 22](https://twitter.com/Decred_ES/status/1328819770876162049) - Internet. Joined by guest Joaquin Moreno to discuss the topic "Companies buying Bitcoin, are you ready?". ([video](https://www.youtube.com/watch?v=N2hxP8I6hbM))
 - Nov 19 - [University of El Salvador](https://twitter.com/addcade/status/1329605293081288709) - Internet. @adcade talked to students of the economics faculty about cryptocurrencies, Decred, governance and contribution opportunities. It was a 2 hour conference with 77 people, extended to +1 hour with ~45 people.
@@ -391,15 +391,15 @@ Those wishing to peek at DCRDEX without installing anything can check the 24/7 [
 
 The replacement for P2SH in BSV's Electrum wallet was [found](https://www.reddit.com/r/bsv/comments/jq9jv3/and_its_gone_popular_bsv_multisig_provides_no/) to be fundamentally broken, allowing anyone to spend coins held in multi-sig hashes on the BSV chain.
 
-The Value DeFi protocol was [hacked](https://rekt.ghost.io/value-defi-rekt/) for $7M, although the attacker returned $2M to the contract address for unknown reasons. The exploit was executed with a flash loan, coming less than 24 hours after Value DeFi had tweeted (now deleted) to boast about robust security with "flash loan attack prevention". 
+The Value DeFi protocol was [hacked](https://rekt.ghost.io/value-defi-rekt/) for $7M, although the attacker returned $2M to the contract address for unknown reasons. The exploit was executed with a flash loan, coming less than 24 hours after Value DeFi had tweeted (now deleted) to boast about robust security with "flash loan attack prevention".
 
-The OUSD stablecoin was [hacked](https://medium.com/originprotocol/urgent-ousd-has-hacked-and-there-has-been-a-loss-of-funds-7b8c4a7d534c) with a flash loan used to conduct a reentrancy attack, to print and rebase (debase) OUSD equivalent to almost the entire circulating supply, allowing the hacker to extract $7M in value. 
+The OUSD stablecoin was [hacked](https://medium.com/originprotocol/urgent-ousd-has-hacked-and-there-has-been-a-loss-of-funds-7b8c4a7d534c) with a flash loan used to conduct a reentrancy attack, to print and rebase (debase) OUSD equivalent to almost the entire circulating supply, allowing the hacker to extract $7M in value.
 
 A flash loan was also used to [exploit](https://decrypt.co/46575/group-uses-flash-loan-to-game-maker-protocol-governance) MakerDAO's governance system, by borrowing $7M worth of MKR tokens and using these to vote before immediately repaying the loan. MakerDAO's [response](https://forum.makerdao.com/t/urgent-flash-loans-and-securing-the-maker-protocol/4901) has been to disable certain executive functions in case an attacker is able to access them, and extend the cooling off period during which the community can respond to unexpected proposals passing. Such a weakness would not be exposed if MKR holders were required to lock tokens for some time in order to vote - or if the amount of MKR available to borrow was less than the amount legitimately engaged in the governance system.
 
 The soft-fork implementation of Schnorr signatures and Taproot was [merged](https://github.com/bitcoin/bitcoin/pull/19953) to Bitcoin Core in October, but as yet there is no agreement on the method for [activating](https://www.coindesk.com/taproot-ready-bitcoin-developers-debate-activation) the change on the network. There is also an unpopular [argument](https://twitter.com/nikzh/status/1332246112196063232) that Taproot will make Bitcoin's privacy situation even worse for regular users by introducing a yet another address scheme. Taproot will add a new type of Schnorr signature, which will allow for greater flexibility with multi-signature wallets and for these transactions to look the same as regular transactions.
 
-The Ethereum 2.0 beacon chain deposit contract was [released](https://www.coindesk.com/ethereum-2-0-contract-deposit-mainnet) in early Nov and reached the target 540,000 ETH deposited on Nov 24, with the final 150,000 ETH coming just hours before a deadline set for a Dec 1 launch. The beacon chain is the first of 4 phases to the launch and migration to Ethereum 2.0, in this initial form the chain's only purpose is to ensure PoS validators can remain in consensus. 
+The Ethereum 2.0 beacon chain deposit contract was [released](https://www.coindesk.com/ethereum-2-0-contract-deposit-mainnet) in early Nov and reached the target 540,000 ETH deposited on Nov 24, with the final 150,000 ETH coming just hours before a deadline set for a Dec 1 launch. The beacon chain is the first of 4 phases to the launch and migration to Ethereum 2.0, in this initial form the chain's only purpose is to ensure PoS validators can remain in consensus.
 
 The latest Bitcoin Cash hard fork [occurred](https://www.coindesk.com/bitcoin-cash-has-split-into-two-new-blockchains-again) in November, this time the focus of dispute is funding for the ABC developers. This hash war had a clear [winner](https://abc.coin.dance/blocks/hashrate), with the BCHN chain (no dev funding) attracting virtually all of the mining power. Ahead of the fork, over 1 million BCH was [observed](https://twitter.com/philip_gradwell/status/1326452365004861440) moving to exchanges (selling a risky asset and receiving split coins are two common reasons for doing so).
 
