--- a/journal/202012.md
+++ b/journal/202012.md
@@ -222,7 +222,8 @@ Selected articles:
 
 Videos:
 
-- {}
+- https://youtu.be/3AxBa-EE8RM by @Checkmate
+  - discussion https://www.reddit.com/r/decred/comments/klz8ue/decred_deep_dive_hidden_hydra/
 
 Audio:
 
