--- a/journal/202012.md
+++ b/journal/202012.md
@@ -132,9 +132,9 @@ Dev activity stats for December: {n} active PRs, {n} master commits, {n}K added 
 
 { hint: list people who made meaningful commits merged in master branches, in alphabetical order }
 
-Welcome to new first time contributors with code merged to master: {@handle} ([{repo}]({link to user's commits})), ...
+Welcome to new first time contributors with code merged to master:  @piotrdelikat ([decrediton](https://github.com/decred/decrediton/commits?author=piotrdelikat)).
 
-Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
+Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS } NA
 
 { welcome new corporate contractors with short intros, if any }
 
