Dev vspd, dcrpool

--- a/journal/202012.md
+++ b/journal/202012.md
@@ -64,15 +64,15 @@ In progress:
 
 **[vspd](https://github.com/decred/vspd)**
 
-- {}
-
-**[dcrstakepool](https://github.com/decred/dcrstakepool)**
-
-- {}
+- reject reused or old [timestamps](https://github.com/decred/vspd/pull/215)
+- more test coverage for database code
+- smaller fixes and preparations for v1.0 release
 
 **[dcrpool](https://github.com/decred/dcrpool)**
 
-- {}
+- [single miner](https://github.com/decred/dcrpool/pull/274) endpoint { what does this do? }
+- save [client info](https://github.com/decred/dcrpool/pull/293) in the database and make it available on any dcrpool instance
+- support for NiceHash pool [validator](https://github.com/decred/dcrpool/pull/294) (allows it to connect to dcrpool and query basic stats) { is this description correct? }
 
 **[dcrlnd](https://github.com/decred/dcrlnd)**
 
