Dev dcrandroid, dcrios, godcr

--- a/journal/202012.md
+++ b/journal/202012.md
@@ -91,17 +91,30 @@ Patch release [v0.1.4](https://github.com/decred/dcrdex/milestone/10) is nearing
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
-- {}
+- notification when cfilters are [fetched](https://github.com/planetdecred/dcrandroid/pull/523)
+- bug fixes
 
-{ also check the base library https://github.com/planetdecred/dcrlibwallet }
+Merged in dcrlibwallet shared library:
+
+- [vspd](https://github.com/planetdecred/dcrlibwallet/pull/163) support
+- method to get info about connected SPV [peers](https://github.com/planetdecred/dcrlibwallet/pull/160)
+- dependency upgrades and bug fixes
+
+Note that features added to dcrlibwallet become available for dcrandroid, dcrios and godcr to use (assuming they add UI for it).
 
 **[dcrios](https://github.com/planetdecred/dcrios)**
 
-- {}
+- [automated](https://github.com/planetdecred/dcrios/pull/707) UI tests for some scenarios using XCUI
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
-- {}
+- [coin selection](https://github.com/planetdecred/godcr/pull/261) interface
+- [notifications](https://github.com/planetdecred/godcr/pull/274) when text is copied or transaction is created
+- new UI design for main [Wallets](https://github.com/planetdecred/godcr/pull/276) page
+- UI tweaks
+- bug fixes and optimizations
+
+{ any comment on communication/interaction between godcr <> gio projects? }
 
 **[dcrdata](https://github.com/decred/dcrdata)**
 
