--- a/journal/202012.md
+++ b/journal/202012.md
@@ -120,37 +120,16 @@ Note that features added to dcrlibwallet become available for dcrandroid, dcrios
 
 In progress:
 
-- script to [salvage](https://github.com/decred/tinydecred/pull/194) funds from an old Copay web wallet
+- script to [recover](https://github.com/decred/tinydecred/pull/194) funds from an old Copay web wallet's xpriv (extended private key). The script has already helped to recover someone's mainnet funds. { is it a correct description? is it the one that was at wallet.decred.org? }
 
 **[dcrros](https://github.com/decred/dcrros)**
 
 - [offline mode](https://github.com/decred/dcrros/pull/14) support to fully fulfill the specs for the [Construction API](https://www.rosetta-api.org/docs/construction_api_introduction.html), where certain operations are only performed in offline instances
 
-**[docs](https://github.com/decred/dcrdocs)**
-
-- {}
-
-**[dcrdevdocs](https://github.com/decred/dcrdevdocs)**
-
-- {}
-
 **[decred.org](https://github.com/decred/dcrweb)**
 
-- {}
-
-{ check if anything interesting happened in the other repos under
-
-- https://github.com/decred
-- https://github.com/planetdecred
-- https://github.com/raedahgroup
-
-}
-
-Other:
-
-- web wallet recovery https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$nrumsrzIS6g0NR6CzsIcCI3jCMm5uYF9TEzbaKcTKgA
-
-Dev activity stats for December: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
+- removed [inactive](https://github.com/decred/dcrweb/pull/935) contributors
+- dependency upgrades
 
 ## People
 
